--- a/produtos.html
+++ b/produtos.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Bikcraft - Sobre</title>
+	<title>Bikcraft - Produtos</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/grid.css">
@@ -22,7 +22,7 @@
 				<ul>
 					<li><a href="sobre.html">Sobre</a></li>
 					<li><a href="produtos.html" class="menu_ativo">Produto</a></li>
-					<li><a href="portifolio.html">Portifólio</a></li>
+					<li><a href="portfolio.html">Portifólio</a></li>
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
 			</nav>
