--- a/portfolio.html
+++ b/portfolio.html
@@ -3,11 +3,12 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Bikcraft</title>
+	<title>Bikcraft - Portifólio</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/grid.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/portfolio.css">
 </head>
 
 <body>
@@ -21,98 +22,37 @@
 				<ul>
 					<li><a href="sobre.html">Sobre</a></li>
 					<li><a href="produtos.html">Produto</a></li>
-					<li><a href="portfolio.html">Portifólio</a></li>
+					<li><a href="portifolio.html"  class="menu_ativo">Portifólio</a></li>
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
 			</nav>
 		</div>
 	</header>
 
-	<section class="introducao">
+	<section class="introducao-interna interna_portfolio">
 		<div class="container">
-			<h1>Bicicletas feitas a Mão</h1>
-			<blockquote class="quote-externo">
-				<p>
-					"não tenha nada em sua casa que você não considere útil ou acredita ser bonito"
-				</p>
-				<cite>WILLIAN MORRIS</cite>
-			</blockquote>
-			<a href="produtos.html" class="btn">Orçamento</a>
+			<h1>Portifólio</h1>
+			<p>Conheça os projetos que amamos mostrar</p>
 		</div>
 	</section>
 
-	<section class="produtos container">
-		<h2 class="subtitulo">Produtos</h2>
-		<ul class="produtos_lista">
-			<li class="grid-1-3">
-				<div class="produtos_icons">
-					<img src="img/produtos/passeio.png" alt="bikcraft passeio">
-				</div>
-				<h3>Passeio</h3>
-				<p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação.</p>
-			</li>
-
-			<li class="grid-1-3">
-				<div class="produtos_icons">
-					<img src="img/produtos/esporte.png" alt="bikcraft passeio">
-				</div>
-				<h3>Esporte</h3>
-				<p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação.</p>
-			</li>
-
-			<li class="grid-1-3">
-				<div class="produtos_icons">
-					<img src="img/produtos/retro.png" alt="bikcraft passeio">
-				</div>
-				<h3>Retro</h3>
-				<p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação.</p>
-			</li>
-		</ul>
-
-		<div class="call">
-			<p>clique aqui e veja os detalhes dos produtos</p>
-			<a href="produtos.html" class="btn btn-preto">Produtos</a>
-		</div>
+	<section class="container">
+		<blockquote class="quote_clientes">
+			<p>"No mundo atual, a contínua expansão de nossa atividade cumpre um papel essencial na formulação da gestão inovadora da qual fazemos parte."</p>
+			<cite>Barbara Moss</cite>
+		</blockquote>
 	</section>
-	<!-- fecha produtos -->
+
 	<section class="portfolio">
 		<div class="container">
-			<h2 class="subtitulo">Portifólio</h2>
+
 			<ul class="portfolio_lista">
 				<li class="grid-8"><img src="img/portfolio/retro.jpg" alt="Bicicleta Retro"></li>
 				<li class="grid-8"><img src="img/portfolio/passeio.jpg" alt="Bicicleta Passeio"></li>
 				<li class="grid-16"><img src="img/portfolio/esporte.jpg" alt="Bicicleta Esporte"></li>
 			</ul>
-			<div class="call">
-				<p>conheça mais nosso portfolio</p>
-				<a href="produtos.html" class="btn">Portifólio</a>
-			</div>
+
 		</div>
-	</section>
-
-	<section class="qualidade container">
-		<h2 class="subtitulo">Qualidade</h2>
-		<img src="img/bikcraft-qualidade.png" alt="Bikcraft">
-		<ul class="qualidade_lista">
-			<li class="grid-1-3">
-				<h3>Durabilidade</h3>
-				<p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação.</p>
-			</li>
-
-			<li class="grid-1-3">
-				<h3>Design</h3>
-				<p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação.</p>
-			</li>
-
-			<li class="grid-1-3">
-				<h3>Sustentabilidade</h3>
-				<p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação.</p>
-			</li>
-		</ul>
-		<div class="call">
-				<p>conheça mais nossa história</p>
-				<a href="sobre.html" class="btn btn-preto">Sobre</a>
-			</div>
 	</section>
 
 	<section class="quebra">
