--- a/sobre.html
+++ b/sobre.html
@@ -22,7 +22,7 @@
 				<ul>
 					<li><a href="sobre.html" class="menu_ativo">Sobre</a></li>
 					<li><a href="produtos.html">Produto</a></li>
-					<li><a href="portifolio.html">Portifólio</a></li>
+					<li><a href="portfolio.html">Portifólio</a></li>
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
 			</nav>
