--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
 				<ul>
 					<li><a href="sobre.html">Sobre</a></li>
 					<li><a href="produtos.html">Produto</a></li>
-					<li><a href="portifolio.html"  class="menu_ativo">Portifólio</a></li>
+					<li><a href="portfolio.html"  class="menu_ativo">Portifólio</a></li>
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
 			</nav>
