--- a/produtos.html
+++ b/produtos.html
@@ -124,7 +124,7 @@
 			<div class="orcamento_dados grid-8">
 				<h3>Dados</h3>
 				<span>+55 21 93223 3232</span>
-				<span class="dados_email">orcamento@bikecraft.com</span>
+				<span>orcamento@bikecraft.com</span>
 				<h3>Monte a sua Bikcraft</h3>
 				<p>Escolha as especificações:</p>
 				<ul>
