--- a/contato.html
+++ b/contato.html
@@ -22,7 +22,7 @@
 				<ul>
 					<li><a href="sobre.html">Sobre</a></li>
 					<li><a href="produtos.html">Produto</a></li>
-					<li><a href="portfolio.html">Portifólio</a></li>
+					<li><a href="portfolio.html">Portfólio</a></li>
 					<li><a href="contato.html" class="menu_ativo">Contato</a></li>
 				</ul>
 			</nav>
