--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<ul>
 					<li><a href="sobre.html">Sobre</a></li>
 					<li><a href="produtos.html">Produto</a></li>
-					<li><a href="portfolio.html">Portifólio</a></li>
+					<li><a href="portfolio.html">Portfólio</a></li>
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
 			</nav>
@@ -77,7 +77,7 @@
 	<!-- fecha produtos -->
 	<section class="portfolio">
 		<div class="container">
-			<h2 class="subtitulo">Portifólio</h2>
+			<h2 class="subtitulo">Portfólio</h2>
 			<ul class="portfolio_lista">
 				<li class="grid-8"><img src="img/portfolio/retro.jpg" alt="Bicicleta Retro"></li>
 				<li class="grid-8"><img src="img/portfolio/passeio.jpg" alt="Bicicleta Passeio"></li>
@@ -85,7 +85,7 @@
 			</ul>
 			<div class="call">
 				<p>conheça mais nosso portfolio</p>
-				<a href="produtos.html" class="btn">Portifólio</a>
+				<a href="produtos.html" class="btn">Portfólio</a>
 			</div>
 		</div>
 	</section>
