--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Bikcraft - Portifólio</title>
+	<title>Bikcraft - Portfólio</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/grid.css">
@@ -22,7 +22,7 @@
 				<ul>
 					<li><a href="sobre.html">Sobre</a></li>
 					<li><a href="produtos.html">Produto</a></li>
-					<li><a href="portfolio.html"  class="menu_ativo">Portifólio</a></li>
+					<li><a href="portfolio.html"  class="menu_ativo">Portfólio</a></li>
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
 			</nav>
@@ -31,7 +31,7 @@
 
 	<section class="introducao-interna interna_portfolio">
 		<div class="container">
-			<h1>Portifólio</h1>
+			<h1>Portfólio</h1>
 			<p>Conheça os projetos que amamos mostrar</p>
 		</div>
 	</section>
