Metatags fixes and add JS

--- a/sobre.html
+++ b/sobre.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Bikcraft - Sobre</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/reset.css">
@@ -125,6 +126,12 @@
 			</div>
 		</div>
 	</footer>
+		<!-- Javascript -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
+		<script>window.jQuery || document.write('<script src="js/libs/jquery/jquery-3.3.1.min.js"><\/script>')</script>
+		<script src="js/libs/plugins.js"></script>
+		<script src="js/libs/main.js"></script>
+		<!-- Javascript -->
 </body>
 
 </html>
