--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Bikcraft - Portfólio</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/reset.css">
@@ -23,7 +24,7 @@
 				<ul>
 					<li><a href="sobre.html">Sobre</a></li>
 					<li><a href="produtos.html">Produto</a></li>
-					<li><a href="portfolio.html"  class="menu_ativo">Portfólio</a></li>
+					<li><a href="portfolio.html" class="menu_ativo">Portfólio</a></li>
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
 			</nav>
@@ -38,38 +39,60 @@
 	</section>
 
 	<section class="container">
-		<blockquote class="quote_clientes">
-			<p>"No mundo atual, a contínua expansão de nossa atividade cumpre um papel essencial na formulação da gestão inovadora da qual fazemos parte."</p>
-			<cite>Barbara Moss</cite>
-		</blockquote>
+		<ul class="rslides">
+			<li>
+				<blockquote class="quote_clientes">
+					<p>"No mundo atual, a contínua expansão de nossa atividade cumpre um papel essencial na formulação da gestão
+						inovadora da qual fazemos parte."</p>
+					<cite>Barbara Moss</cite>
+				</blockquote>
+			</li>
+
+			<li>
+				<blockquote class="quote_clientes">
+					<p>"Do mundo atual, a contínua expansão de nossa atividade cumpre um papel essencial na formulação da gestão
+						inovadora da qual fazemos parte."</p>
+					<cite>Bernardo</cite>
+				</blockquote>
+			</li>
+
+			<li>
+				<blockquote class="quote_clientes">
+					<p>"No mundo recente, a contínua expansão de nossa atividade cumpre um papel essencial na formulação da gestão
+						inovadora da qual fazemos parte."</p>
+					<cite>Jhony Rato</cite>
+				</blockquote>
+			</li>
+		</ul>
+
 	</section>
 
 	<section class="portfolio">
 		<div class="container">
-
 			<ul class="portfolio_lista">
-				<li class="grid-8"><img src="img/portfolio/retro.jpg" alt="Bicicleta Retro"></li>
-				<li class="grid-8"><img src="img/portfolio/passeio.jpg" alt="Bicicleta Passeio"></li>
-				<li class="grid-16"><img src="img/portfolio/esporte.jpg" alt="Bicicleta Esporte"></li>
+				<li>
+					<div class="grid-8"><img src="img/portfolio/retro.jpg" alt="Bicicleta Retro"></div>
+					<div class="grid-8"><img src="img/portfolio/passeio.jpg" alt="Bicicleta Passeio"></div>
+					<div class="grid-16"><img src="img/portfolio/esporte.jpg" alt="Bicicleta Esporte"></div>
+				</li>
 			</ul>
-
 		</div>
 	</section>
 
 	<section class="quebra">
 		<blockquote class="quote-externo container">
-				<p>
-					"o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana"
-				</p>
-				<cite>WILLIAN MORRIS</cite>
-			</blockquote>
+			<p>
+				"o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana"
+			</p>
+			<cite>WILLIAN MORRIS</cite>
+		</blockquote>
 	</section>
 	<footer>
 		<div class="footer">
 			<div class="container">
 				<div class="grid-8 footer_historia">
 					<h3>Nossa História</h3>
-					<p>O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana. 
+					<p>O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana.
 						interesse por todos os detalhes da vida cotidian</p>
 				</div>
 
@@ -99,6 +122,12 @@
 			</div>
 		</div>
 	</footer>
+	<!-- Javascript -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="js/libs/jquery/jquery-3.3.1.min.js"><\/script>')</script>
+	<script src="js/libs/plugins.js"></script>
+	<script src="js/libs/main.js"></script>
+	<!-- Javascript -->
 </body>
 
 </html>
