Add JS and fixes

--- a/produtos.html
+++ b/produtos.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/produtos.css">
 	<link rel="stylesheet" href="css/responsivo.css">
+	<script src="js/libs/modernizr.custom.45655.js"></script>
 </head>
 
 <body>
@@ -38,7 +39,7 @@
 		</div>
 	</section>
 
-	<section class="container produto_item">
+	<section class="container produto_item animar-interno">
 		<div class="grid-11">
 			<img src="img/produtos/bikcraft-passeio-1.jpg" alt="Bikcraft Passeio">
 			<h2>Passeio</h2>
@@ -186,8 +187,8 @@
 		<!-- Javascript -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
 		<script>window.jQuery || document.write('<script src="js/libs/jquery/jquery-3.3.1.min.js"><\/script>')</script>
-		<script src="js/libs/plugins.js"></script>
-		<script src="js/libs/main.js"></script>
+		<script src="js/plugins.js"></script>
+		<script src="js/main.js"></script>
 		<!-- Javascript -->
 </body>
 
