--- a/contato.html
+++ b/contato.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/contato.css">
 	<link rel="stylesheet" href="css/responsivo.css">
+	<script src="js/libs/modernizr.custom.45655.js"></script>
 </head>
 
 <body>
@@ -38,7 +39,7 @@
 		</div>
 	</section>
 
-	<section class="contato container">
+	<section class="contato container animar-interno">
 		<form action="" id="form_orcamento" class="grid-8 contato_form">
 			<label for="nome">Nome</label>
 			<input type="text" id="nome">
@@ -118,8 +119,8 @@
 		<!-- Javascript -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
 		<script>window.jQuery || document.write('<script src="js/libs/jquery/jquery-3.3.1.min.js"><\/script>')</script>
-		<script src="js/libs/plugins.js"></script>
-		<script src="js/libs/main.js"></script>
+		<script src="js/plugins.js"></script>
+		<script src="js/main.js"></script>
 		<!-- Javascript -->
 </body>
 
