--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/portfolio.css">
 	<link rel="stylesheet" href="css/responsivo.css">
+	<script src="js/libs/modernizr.custom.45655.js"></script>
 </head>
 
 <body>
@@ -38,7 +39,7 @@
 		</div>
 	</section>
 
-	<section class="container">
+	<section class="container animar-interno">
 		<ul class="rslides">
 			<li>
 				<blockquote class="quote_clientes">
@@ -69,10 +70,15 @@
 
 	<section class="portfolio">
 		<div class="container">
-			<ul class="portfolio_lista">
+			<ul class="portfolio_lista rslides_portfolio">
 				<li>
 					<div class="grid-8"><img src="img/portfolio/retro.jpg" alt="Bicicleta Retro"></div>
 					<div class="grid-8"><img src="img/portfolio/passeio.jpg" alt="Bicicleta Passeio"></div>
+					<div class="grid-16"><img src="img/portfolio/esporte.jpg" alt="Bicicleta Esporte"></div>
+				</li>
+				<li>
+					<div class="grid-8"><img src="img/portfolio/passeio.jpg" alt="Bicicleta Retro"></div>
+					<div class="grid-8"><img src="img/portfolio/retro.jpg" alt="Bicicleta Passeio"></div>
 					<div class="grid-16"><img src="img/portfolio/esporte.jpg" alt="Bicicleta Esporte"></div>
 				</li>
 			</ul>
@@ -125,8 +131,8 @@
 	<!-- Javascript -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/libs/jquery/jquery-3.3.1.min.js"><\/script>')</script>
-	<script src="js/libs/plugins.js"></script>
-	<script src="js/libs/main.js"></script>
+	<script src="js/plugins.js"></script>
+	<script src="js/main.js"></script>
 	<!-- Javascript -->
 </body>
 
