--- a/sobre.html
+++ b/sobre.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/sobre.css">
 	<link rel="stylesheet" href="css/responsivo.css">
+	<script src="js/libs/modernizr.custom.45655.js"></script>
 </head>
 
 <body>
@@ -38,7 +39,7 @@
 		</div>
 	</section>
 
-	<section class="missao_sobre container">
+	<section class="missao_sobre container animar-interno">
 		<div class="grid-10">
 			<h2 class="subtitulo-interno">História, Missão e Visão</h2>
 			<p>No mundo atual, a contínua expansão de nossa atividade cumpre um papel essencial na formulação da gestão inovadora 
@@ -129,8 +130,8 @@
 		<!-- Javascript -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
 		<script>window.jQuery || document.write('<script src="js/libs/jquery/jquery-3.3.1.min.js"><\/script>')</script>
-		<script src="js/libs/plugins.js"></script>
-		<script src="js/libs/main.js"></script>
+		<script src="js/plugins.js"></script>
+		<script src="js/main.js"></script>
 		<!-- Javascript -->
 </body>
 
